--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 12px;
     line-height: 1.42857143;
-    margin: 250;
+    margin: 200px 200px;
     align-items: center;
 }
 
